--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -120,12 +120,17 @@ body {
       color: #000 !important;
   }
   .dropdown-menu li a:hover {
-      background-color: red !important;
+      background-color: #4a004a !important;
   }
   footer {
-      background-color: #2d2d30;
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      padding: 1rem;
+      text-align: center;
+      background-color: #4a4a4a;
       color: #f5f5f5;
-      padding: 32px;
   }
   footer a {
       color: #f5f5f5;
