--- a/views/index.pug
+++ b/views/index.pug
@@ -1,25 +1,21 @@
-extends layout
+extends navbar
 
-block content
-	nav.navbar.navbar-default.navbar-fixed-top
-		.container-fluid
-			.navbar-header
-				button.navbar-toggle(type='button', data-toggle='collapse', data-target='#myNavbar')
-					span.icon-bar
-					span.icon-bar
-					span.icon-bar
-				a.navbar-brand(href='index.html') Logo
-			#myNavbar.collapse.navbar-collapse
-				ul.nav.navbar-nav.navbar-right
-					li
-						a(href='Peliculas.html') Peliculas
-					li
-						a(href='Series.html') Series
-					li
-						a(href='Musica.html') Musica
-					li
-						a(href='https://www.google.com.mx/') Internet
-					li
-						a(href='#')
-							span.glyphicon.glyphicon-search
-
+block navbar
+	#Menu.container.text-center
+		h3 Menú Principal
+		.row
+			.col-md-4
+				p.text-center
+					strong Peliculas
+				a(href='peliculas')
+					img.img-responsive(src='Images/Sin título-1.png', alt='Random Name')
+			.col-md-4
+				p.text-center
+					strong Música
+				a(href='musica')
+					img.img-responsive(src='Images/musica.png', alt='Random Name')
+			.col-md-4
+				p.text-center
+					strong Documentales
+				a(href='documentales')
+					img.img-responsive(src='Images/documental.png', alt='Random Name')
