--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src='jquery-1.11.2.min.js')
-    script(src='js/bootstrap.min.js')
+    link(rel='stylesheet', href='/bootstrap/dist/css/bootstrap.min.css')
+    script(src='/jquery/dist/jquery.min.js')
+    script(src='/bootstrap/dist/js/bootstrap.min.js')
   body
     block content
