--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,5 +6,8 @@ html
     link(rel='stylesheet', href='/bootstrap/dist/css/bootstrap.min.css')
     script(src='/jquery/dist/jquery.min.js')
     script(src='/bootstrap/dist/js/bootstrap.min.js')
-  body
+    script(src='/angular/angular.min.js')
+    script(src='/javascripts/angular-app.js')
+
+  body(ng-app='myApp')
     block content
